Fix location variable and tooltip z-index issues

--- a/src/components/MeasurementBox/MeasurementBox.module.css
+++ b/src/components/MeasurementBox/MeasurementBox.module.css
@@ -12,6 +12,9 @@
   );
   flex-grow: 2;
 }
+.MeasurementBox:first-child {
+  z-index: 1;
+}
 
 .Circles {
   display: flex;
