--- a/src/components/MeasurementCircle/MeasurementCircle.module.css
+++ b/src/components/MeasurementCircle/MeasurementCircle.module.css
@@ -49,6 +49,7 @@
 
 .Tooltip::after {
   transform-origin: 0 50%;
+  transform: rotate(-240deg);
   -webkit-transform: rotate(-240deg);
   bottom: -2px;
   left: -9px;
@@ -82,6 +83,7 @@
 .MeasurementCircle:nth-child(3) .Tooltip::after,
 .MeasurementCircle:nth-child(4) .Tooltip::after {
   left: 147px;
+  transform: rotate(-300deg);
   -webkit-transform: rotate(-300deg);
 }
 
@@ -95,14 +97,21 @@ canvas.chartjs-render-monitor {
 }
 
 @media only screen and (min-width: 576px) {
-  .MeasurementCircle:nth-child(3) .Tooltip {
+  .MeasurementCircle:last-child .Tooltip,
+  .MeasurementCircle:nth-child(3) .Tooltip,
+  .MeasurementCircle:nth-child(4) .Tooltip {
     margin-left: 3.5rem;
   }
-  .MeasurementCircle:nth-child(3) .Tooltip::before {
+  .MeasurementCircle:last-child .Tooltip::before,
+  .MeasurementCircle:nth-child(3) .Tooltip::before,
+  .MeasurementCircle:nth-child(4) .Tooltip::before {
     left: -10px;
   }
-  .MeasurementCircle:nth-child(3) .Tooltip::after {
+  .MeasurementCircle:last-child .Tooltip::after,
+  .MeasurementCircle:nth-child(3) .Tooltip::after,
+  .MeasurementCircle:nth-child(4) .Tooltip::after {
     left: -9px;
+    transform: rotate(-240deg);
     -webkit-transform: rotate(-240deg);
   }
 }
